# jarvis_one

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  checkdiff.py  proc_memlog.txt  watch_mem.sh
jarvis/: CMakeLists.txt  jarvis-config.cmake.in  package.xml
jarvis/configuration/: estimator.yaml  estimator_76.yaml  estimator_77.yaml  estimator_old.yaml  ld_cam0.yaml  ld_cam0_76.yaml  ld_cam0_77.yaml  ld_cam1_77.yaml  simple_vo.yaml
jarvis/configuration/euroc_test_new/: cam0_kannala_brandt.yaml  cam0_mei.yaml  cam0_pin.yaml  cam0_pinhole.yaml  cam1_kannala_brandt.yaml  cam1_mei.yaml  cam1_pin.yaml  cam1_pinhole.yaml  euroc_stereo_config.yaml  euroc_stereo_config_15.yaml  ld_cam1.yaml  magic_stereo_config.yaml  mapping_builder.yaml  meta_bag_new_cam_test.yaml
jarvis/jarvis/: key_frame_data.h  motion_filter.cc  motion_filter.h  trajectory_builder.cc  trajectory_builder.h
jarvis/jarvis/camera_models/: camera_base_interface.h
jarvis/jarvis/camera_models/calib/: camera_calibration.cc  camera_calibration.h
jarvis/jarvis/camera_models/camera_models/: CataCamera.cc  CataCamera.h  CostFunctionFactory.cc  CostFunctionFactory.h  EquidistantCamera.cc  EquidistantCamera.h  PinholeCamera.cc  PinholeCamera.h  PinholeFullCamera.cc  PinholeFullCamera.h  ScaramuzzaCamera.cc  ScaramuzzaCamera.h  camera.cc  camera.h  camera_factory.cc  camera_factory.h
jarvis/jarvis/camera_models/chessboard/: Chessboard.cc  Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h
jarvis/jarvis/camera_models/gpl/: EigenQuaternionParameterization.cc  EigenQuaternionParameterization.h  EigenUtils.h  gpl.cc  gpl.h
jarvis/jarvis/camera_models/sparse_graph/: Transform.cc  Transform.h
jarvis/jarvis/common/: data_structure.h  eigen_quaterniond_from_two_vectors.h  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  id.h  math.h  port.h  time.cc  time.h
jarvis/jarvis/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  imu_extrapolator.cc  imu_extrapolator.h  parameters.cpp  parameters.h  slide_window.h  updater_zero_velocity.cc  updater_zero_velocity.h
jarvis/jarvis/estimator/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
jarvis/jarvis/estimator/featureTracker/: feature_detect.cpp  feature_detect.h  feature_tracker.cpp  feature_tracker.cxx  feature_tracker.h  feature_utils.cc  feature_utils.h  pyramid_image.cc  pyramid_image.h  xppyramid.cc  xppyramid.hpp
jarvis/jarvis/estimator/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
jarvis/jarvis/feature/: feature_detect.cc  feature_detect.h
jarvis/jarvis/object/: object_detect.cc  object_detect.h  object_interface.cc  object_interface.h  object_process.cc  object_process.h
jarvis/jarvis/sensor/: data_process.cc  data_process.h  fixed_frame_pose_data.h  image_data.h  imu_data.h  odometry_data.h  stereo_sync.cc  stereo_sync.h
jarvis/jarvis/transform/: rigid_transform.cc  rigid_transform.h  timestamped_transform.cc  timestamped_transform.h  transform.cc  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
jarvis/jarvis/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h  utility.cpp  utility.h
jarvis/script/: graph_compare.py  mem.py  pic_ace.py  plot_results.py
jarvis/script/auto_test/: configs.yaml  mb_evaluations.py  run_mbvio.py  save_setup.py
jarvis/script/auto_test/trajectory_evaluation/: associate.py  evaluate.py  evaluate_ate.py  plots.py
jarvis/slip_detection/: option_parse.cc  option_parse.h  simple_vo.cc  simple_vo.h  slip_detect.cc  slip_detect.h
jarvis_pic/: CMakeLists.txt  data_capture.cc  data_capture.h  data_capture_back.cc  dev_interface.h  dev_socket.cc  dev_socket.h  jarvis_main.cc  jarvis_pic_main.cc  jarvis_slipe_detect_main.cc  pose_optimization.cc  pose_optimization.h  socket_wrapper.cc  socket_wrapper.h  zmq_component.cc  zmq_component.h
jarvis_pic/SensorDataCapturer/: CamImuAligner.cpp  CamImuAligner.h  DataCapturer.cpp  DataCapturer.h  sensor_data.h
jarvis_ros/src/: jarvis_offline_ros_main.cpp  ros_component.cc
jarvis_ros2/: CMakeLists.txt  jarvis_main.cc  jarvis_rtk_vio_pose_compare.cc  jarvis_slip_detect_main.cc  jarvis_zmp_main.cc  pose_optimization.cc  pose_optimization.h  ros_component.cc  ros_component.h
src/: main.cpp
src/fio/: CamImuAligner.cpp  CamImuAligner.h  DataCapturer.cpp  DataCapturer.h
src/utils/: print.cpp  print.h  sensor_data.h  utility.h
